--- a/.github/workflows/streamlit.yml
+++ b/.github/workflows/streamlit.yml
@@ -43,7 +43,7 @@ jobs:
 
       # Step 2
       - name: Create CodeDeploy Deployment
-        id: deploy
+        id: deploy-simple
         run: |
           aws deploy create-deployment \
             --application-name lab-edu-cd-application-streamlit \
@@ -53,7 +53,7 @@ jobs:
             
       # Step 3
       - name: Create CodeDeploy Deployment (ASG)
-        id: deploy
+        id: deploy-asg
         run: |
           aws deploy create-deployment \
             --application-name lab-edu-cd-application-streamlit \
